--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
       <artifactId>guava</artifactId>
       <version>28.2-jre</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-pool2</artifactId>
+      <version>2.8.0</version>
+    </dependency>
+
   </dependencies>
 
 </project>
